// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render in disabled state 1`] = `
<div
  class="singleItemSelection disabled"
>
  <button
    class="button"
    disabled=""
    type="button"
  >
    <span
      aria-label="su-document"
      class="su-document"
    />
  </button>
  <div
    class="itemContainer"
  >
    <div
      class="item"
    >
      Test Item
    </div>
  </div>
</div>
`;

exports[`Render in invalid state 1`] = `
<div
  class="singleItemSelection error"
>
  <button
    class="button"
    type="button"
  >
    <span
      aria-label="su-document"
      class="su-document"
    />
  </button>
  <div
    class="itemContainer"
  >
    <div
      class="item"
    >
      Test Item
    </div>
  </div>
</div>
`;

exports[`Render in loading state 1`] = `
<div
  class="singleItemSelection"
>
  <button
    class="button"
    type="button"
  >
    <span
      aria-label="su-document"
      class="su-document"
    />
  </button>
  <div
    class="itemContainer"
  >
    <div
      class="item"
    >
      Test Item
    </div>
    <div
      class="spinner loader"
      style="width:14px;height:14px"
    >
      <div
        class="doubleBounce1"
      />
      <div
        class="doubleBounce2"
      />
    </div>
  </div>
</div>
`;

exports[`Render with emptyText if no children have been passed 1`] = `
<div
  class="singleItemSelection"
>
  <button
    class="button"
    type="button"
  >
    <span
      aria-label="su-page"
      class="su-page"
    />
  </button>
  <div
    class="itemContainer"
  >
    <div
      class="item"
    >
      <div
        class="empty"
      >
        Nothing!
      </div>
    </div>
    <button
      class="removeButton"
      type="button"
    >
      <span
        aria-label="su-trash-alt"
        class="su-trash-alt"
      />
    </button>
  </div>
</div>
`;

exports[`Render with given children prop 1`] = `
<div
  class="singleItemSelection"
>
  <button
    class="button"
    type="button"
  >
    <span
      aria-label="su-document"
      class="su-document"
    />
  </button>
  <div
    class="itemContainer"
  >
    <div
      class="item"
    >
      Test Item
    </div>
  </div>
</div>
`;

exports[`Render with given onRemove prop 1`] = `
<div
  class="singleItemSelection"
>
  <button
    class="button"
    type="button"
  >
    <span
      aria-label="su-page"
      class="su-page"
    />
  </button>
  <div
    class="itemContainer"
  >
    <div
      class="item"
    >
      Test Item
    </div>
    <button
      class="removeButton"
      type="button"
    >
      <span
        aria-label="su-trash-alt"
        class="su-trash-alt"
      />
    </button>
  </div>
</div>
`;
